--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta charset="UTF-8">
   <title>Sticky!</title>
+  <link rel="stylesheet" href="./css/jquery-ui.min.css">
+  <link rel="stylesheet" href="./css/jquery-ui.structure.min.css">
+  <link rel="stylesheet" href="./css/jquery-ui.theme.min.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/material.min.css">
+  <link rel="stylesheet" href="./css/material-wfont.min.css">
+  <link rel="stylesheet" href="./css/ripples.min.css">
+  <link rel="stylesheet" href="./styles/default.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -26,8 +33,9 @@
               <li><a href="javascript:void(0)" id="clear">Clear</a></li>
             </ul>
             <div class="navbar-form navbar-right" role="search">
-              <div class="form-group">
-                <input id="search" type="text" class="form-control" placeholder="Search">
+              <div class="form-control-wrapper">
+                <input id="search" type="text" class="form-control empty" placeholder="Search">
+                <span class="material-input"></span>
               </div>
             </div>
           </nav>
@@ -42,8 +50,12 @@
     </div>
   </div>
   <script type="text/javascript" src="./js/jquery.js"></script>
-  <script type="text/javascript" src="./js/jquery-ui.js"></script>
+  <script type="text/javascript" src="./js/jquery-ui.min.js"></script>
   <script type="text/javascript" src="./js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="./js/material.min.js"></script>
+  <script type="text/javascript" src="./js/ripples.min.js"></script>
+  <script type="text/javascript" src="./js/highlight.pack.js" ></script>
+  <script type="text/javascript" src="./js/marked.min.js"></script>
   <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
